<?xml version="1.0"?>
<package>
  <name>roscpp14</name>
  <version>0.0.0</version>
  <description>roscpp supports c++14 now!</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>Apache License V2.0</license>
  <url type="website">http://wiki.ros.org/roscpp14</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <export>
  </export>
</package>
